--- a/kernel/kernel-auditmanager-service/pom.xml
+++ b/kernel/kernel-auditmanager-service/pom.xml
@@ -103,6 +103,11 @@
 		    <artifactId>jakarta.servlet-api</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+	        <groupId>org.apache.activemq</groupId>
+	        <artifactId>activemq-all</artifactId>
+	        <version>5.14.5</version>
+	 	</dependency>
 	</dependencies>
 	
 <distributionManagement>
